Fixing navigation mobile view

--- a/client/src/components/tableDisplay.css
+++ b/client/src/components/tableDisplay.css
@@ -277,3 +277,17 @@
 .archiveButton{
   text-align: center;
 }
+
+.profile-details{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.label-name {
+  font-size: 12px;
+  color: #555555;
+  width: 24%;
+  text-align: left;
+  margin-right: 40px;
+}
